Refine encrypt feature as workflow template (#38836)
* Refine encrypt feature as workflow template

Refine the MCP encrypt feature as the template for feature workflows.

- keep encrypt planning, apply, and validation rule-DistSQL-only
- harden descriptor, prompt, resource guidance, and secret redaction contracts
- centralize encrypt algorithm capability metadata
- update docs, unit tests, and E2E coverage for template acceptance

* Refine encrypt feature as workflow template

Refine the MCP encrypt feature as the template for feature workflows.

- keep encrypt planning, apply, and validation rule-DistSQL-only
- harden descriptor, prompt, resource guidance, and secret redaction contracts
- centralize encrypt algorithm capability metadata
- update docs, unit tests, and E2E coverage for template acceptance

* Refine encrypt feature as workflow template

Refine the MCP encrypt feature as the template for feature workflows.

- keep encrypt planning, apply, and validation rule-DistSQL-only
- harden descriptor, prompt, resource guidance, and secret redaction contracts
- centralize encrypt algorithm capability metadata
- update docs, unit tests, and E2E coverage for template acceptance